install/kubernetes/global-default-sidecar-scope.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-config
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default-sidecar-scope
  namespace: istio-config
spec:
  egress:
    # If this config is applied, sidecars will only be able to talk to
    # other services in the same namespace, in addition to istio-telemetry
    # and istio-policy
  - hosts:
    - "./*"
    - "istio-config/*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default-destination-rule
  namespace: istio-config
spec:
  host: "*.local"
  exportTo:
  - '*'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    outlierDetection:
      consecutiveErrors: 10
      maxEjectionPercent: 100
      minHealthPercent: 0
    connectionPoolSettings:
      tcp:
        maxConnections: 8096
      http:
        http1MaxPendingRequests: 8096
        http2MaxPendingRequests: 8096
        maxRequestsPerConnection: 0
        maxRetries: 8096
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-server
  namespace: istio-config
spec:
  host: "kubernetes.default.svc.cluster.local"
  exportTo:
  - '*'
  trafficPolicy:
    tls:
      mode: DISABLE
---
